--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
   "dependencies": {
     "blueimp-md5": "^2.3.0",
     "email-validator": "^2.0.3",
-    "querystring": "0.2.0",
-    "yargs": "^11.0.0"
+    "querystring": "0.2.0"
   },
   "devDependencies": {
     "mocha": "1.21.4",
