--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "main": "index.js",
   "scripts": {
-    "test": "node_modules/mocha/bin/mocha -R spec"
+    "test": "mocha -R spec"
   },
   "license": "MIT",
   "engines": {
